
Package: R.cache
================

Version: 0.9.1 [2013-12-21]
o Added argument 'path' and 'rootPath' to getCachePath().


Version: 0.9.0 [2013-10-17]
o BUG FIX: If the package was only loaded but not attached, the cache
  root path would default to ~/.Rcache/, which in turn could cause
  that path to be create without asking the user.  For instance,
  R.cache::loadCache(list()) would do.  Thanks to Kurt Hornik at
  Vienna University of Economics and Business for reporting on this.


Version: 0.8.4 [2013-10-14]
o Adjusted package dependencies and NAMESPACE to work with the
  package versions available on CRAN.
o Now DESCRIPTION's 'Authors' field matches 'Authors@R'.


Version: 0.8.3 [2013-10-03]
o Bumped package dependencies.


Version: 0.8.2 [2013-09-28]
o Now the 'R.cache' Package object is also available when the
  package is only loaded (but not attached).


Version: 0.8.1 [2013-09-15]
o CLEANUP: Now only importing a minimal set of functions needed
  from the 'R.oo' and the 'R.utils' packages.
o Bumped package dependencies.


Version: 0.8.0 [2013-08-21]
o Now R.utils is no longer attached ("loaded") - only imported.
o Added system tests.


Version: 0.7.4 [2013-08-20]
o Now explicitly importing one function from 'utils' in NAMESPACE.


Version: 0.7.3 [2013-08-18]
o Now clearCache() is exported (re-exported from R.oo).


Version: 0.7.2 [2013-08-03]
o Bumped package dependencies.
o BUG FIX: R.cache:::.assertDigest() called from within another package
  would give an error that packageVersion() of 'utils' was not found.


Version: 0.7.1 [2013-07-11]
o Updated the title and the description of the package.


Version: 0.7.0 [2013-07-03]
o Now getChecksum() passes '...' to digest(), e.g. argument 'algo'.
o Bumped package dependencies.


Version: 0.6.10 [2013-05-25]
o Minor speedup of loadCache() - replaced an rm() call with NULL assignment.


Version: 0.6.9 [2013-05-20]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.